# email_management

./: .gitignore  Dockerfile  __init__.py  dockerFile  main.py  pyproject.toml  readme.md  reciever.py  request.md  requirements.txt  sender.py  sendreply.py  treez
follow_up/: __init__.py  follow_up_manager.py  follow_up_scheduler.py
scheduler/: __init__.py  email_distributor.py  schedule_manager.py
scheduler/models/: __init__.py  email_schedule.py
scheduler/utils/: __init__.py  scheduling_utils.py  time_utils.py  tracker_utils.py  validation.py
src/lib/: __init__.py  anthropic_agent.py  gpt_agent.py  imap_tools_based_functions.py  prompts.py  smtp_based_funcions.py  supabase_client.py
